# nvmefs

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  install-dependencies.sh
.github/: CODEOWNERS
.github/workflows/: MainDistributionPipeline.yml
docs/nvmefs/: file_system-overview.md
scripts/: setup-custom-toolchain.sh
scripts/nvme/: create_device.sh  create_fdp_device.sh  device_dealloc.sh
scripts/xnvme/: ci-install.sh  install.sh
src/: device.cpp  fake_device.cpp  nvme_device.cpp  nvmefs.cpp  nvmefs_config.cpp  nvmefs_extension.cpp  nvmefs_metadata.cpp  nvmefs_proxy.cpp  nvmefs_secret.cpp  nvmefs_temporary_block_manager.cpp  temporary_file_metadata_manager.cpp
src/include/: device.hpp  fake_device.hpp  nvme_device.hpp  nvmefs.hpp  nvmefs_config.hpp  nvmefs_extension.hpp  nvmefs_metadata.hpp  nvmefs_proxy.hpp  nvmefs_secret.hpp  nvmefs_temporary_block_manager.hpp  temporary_file_metadata_manager.hpp
test/e2e/: init.sh
test/e2e/basic/: test_open_and_close_database.py  test_temporary.py
test/gtest/: CMakeLists.txt  test.cpp  test_nvmefs_proxy.cpp  test_simple.cpp
test/gtest/utils/: CMakeLists.txt  fake_device.cpp  fake_device.hpp  gtest_utils.cpp  gtest_utils.hpp
test/integration/: conftest.py  init.sh  requirements.txt  run.sh  test_runner.py  testrunner.py
test/integration/basic/: open_and_close_database.py  temporary.py  test_open_and_close_database.py  test_temporary.py
test/integration/utils/: device.py
test/sql/: nvmefs.test
